--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="root">
-      <router-view />
+      <transition name="pane">
+        <router-view />
+      </transition>
+      
     </div>
 
     <script src="./app.js"></script>
